2004-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* rungm.sh.in: Compute final variable definitions from within
	configure in order to improve MinGW test execution times.

2004-11-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gif.c: Fix two error-path memory leaks which were noticed
	by Glenn Randers-Pehrson.

2004-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (UnregisterPNGImage): Eliminate Warning: module
	registration for "JNG" from module "PNG" still present!

2004-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (DispatchImage): Fix documentation error
	regarding return status.

2004-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.h: Only define HAVE_GLOBALMEMORYSTATUSEX for MSVC
	7.0 and later.

2004-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Ensure that words in the
	scanline are converted to little-endian format on little-endian
	CPUs.

2004-11-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (MagickStrlCat): New function which is
	equivalent to to OpenBSD's strlcat() function.  Concatenates one
	string onto another within a fixed size buffer while ensuring null
	termination.
	(MagickStrlCpy): New function which is equivalent to OpenBSD's
	strlcpy() function.  Copies a string into a fixed size buffer
	while ensuring null termination.
	* coders/gif.c (DecodeImage): Improve handling of corrupt GIF
	files.  Resolves SourceForge bug #1042904.  Also, eliminate a
	potential memory leak.
	* magick/constitute.c (WriteImages): ImageInfo argument is now a
	const pointer.

2004-10-26 Glenn Randers-Pehrson <glennrp@glennrp.com>

	* magick/render.c (TracePath): Applied bugfix from Cristy.

2004-10-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (InitializeMagickResources): Use
	GlobalMemoryStatusEx if it is available.